# ai-admin-server

./: .flake8  .gitignore  =5.0.0  AUTO_DISCOVERY_IMPLEMENTATION_REPORT.md  BUG_REPORT_HEARTBEAT.md  CLEANUP_REPORT.md  CSR_COMMAND_REQUEST.md  DOCKER_IMAGES_SUMMARY.md  Dockerfile.test  FEATURE_REQUEST_SECURITY_FRAMEWORK.md  FINAL_REPORT.md  FTP_COMMANDS_FINAL_REPORT.md  FTP_REAL_SERVER_TEST_REPORT.md  GIT_AUTHENTICATION_REPORT.md  KUBERNETES_FUNCTIONALITY_ANALYSIS.md  MIGRATION_CHECKLIST.md  MIGRATION_STATUS.md  OLLAMA_COMMANDS_FINAL_REPORT.md  PACKAGE_UPDATE_ANALYSIS.md  QUEUE_MANAGEMENT_REPORT.md  QUEUE_TASK_MANAGEMENT_REPORT.md  README.md  SECURITY_TESTING_FINAL_REPORT.md  SSH_COMMANDS_QUEUE_REPORT.md  TEST_README.md  TOOL_PRIORITY_PROMPT.md  _fix_ssl_type.py  add_full_queue_support.py  add_queue_to_docker_commands.py  certificate_database.json  config.json  config.json.backup  config_tests_final_report.md  copy_all_commands.py  create_test_certificates.py  create_test_certificates_openssl.py  crl_database.json  csr_database.json  demo_git_auth.py  detach_start_ai_admin_http.py  (+46 more)
add_full_queue_support/: main_module.py  queue_helpers.py
ai_admin/: _DELETE_ME_mcp_universal_replace_demo.py  __init__.py  __main__.py  adapter_hooks.py  dependency_injection.py  hooks.py  security_integration.py  server.py  server.py.backup  settings_manager.py  simple_server.py
certificates/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  test.crt  test.csr  test.key
certs-test-cluster-certs-new/: ca.crt  ca.key  ca.srl  client.crt  client.key  server.crt  server.key
certs-test-cluster-v5/: ca.crt
certs-test-cluster-v6/: ca.crt
certs-test-cluster-v7/: ca.crt
certs-test-cluster-with-certs/: ca.crt  ca.key  ca.srl  client.crt  client.key  server.crt  server.key
certs-test-cluster-with-proper-certs/: ca.crt  ca.key  ca.srl  client.crt  client.key  crl.pem  server.crt  server.key
certs-test-cluster-with-proper-certs-v2/: ca.key
commands/: argocd_init_command.py  base_git_command.py  base_unified_command.py  cert_key_pair_command.py  (+125 more)
(+1128 files in other folders)
